Removed plugins and fixed spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -175,8 +175,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width: -webkit-calc(#{$content-width});
+  max-width:         calc(#{$content-width});
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
@@ -214,6 +214,7 @@ pre {
     display: inline-block;
     fill: #{$grey-color};
     padding-right: 10px;
+    padding-top: 3px;
     vertical-align: text-top;
 }
 
